--- a/.github/workflows/thesis-pdf.yml
+++ b/.github/workflows/thesis-pdf.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Compile LaTeX
-      run: make all
+      run: make main.pdf
 
     - name: Upload pdf
       uses: actions/upload-artifact@v1
